appId: ${APP_ID}
---
- launchApp:
    clearState: true
- tapOn: "More payment scenarios"
- tapOn: "Set up future payments"
- assertVisible:
    text: "E-mail"
- inputText: "4242424242424242"
- inputText: "0145"
- inputText: "123"
- tapOn:
    text: "E-mail"
- inputText: "test@stripe.com"
- tapOn: "Save via card input form"
- assertVisible:
    text: "Success"
- tapOn: "OK"
- tapOn: "Save via token"
- assertVisible:
    text: "Success"
- tapOn: "OK"
- tapOn: "Save via payment method ID"
- assertVisible:
    text: "Success"
- tapOn: "OK"
