appId: ${APP_ID}
---
- launchApp
- tapOn: "Bank redirects"
- scrollUntilVisible:
    element:
      text: "Sofort"
    direction: DOWN
- tapOn: "Sofort"
- assertVisible:
    text: "E-mail"
- tapOn:
    text: "E-mail"
- inputText: "test@stripe.com"
- tapOn:
    text: "Pay"
    retryTapIfNoChange: false
- assertVisible:
    text: "AUTHORIZE TEST PAYMENT"
- tapOn: "AUTHORIZE TEST PAYMENT"
- assertVisible:
    text: "Processing"
- tapOn: "OK"
